# fast-mul

./: CMakeLists.txt  README.md  fast_mul.c  fast_mul.h  main.c
